--- a/src/main/resources/templates/sales_book.html
+++ b/src/main/resources/templates/sales_book.html
@@ -11,7 +11,7 @@
 
 <p><img th:src="@{images/logo.jpg}" width="300" height="100" alt="" src=""/></p>
 
-<form method="GET" enctype="multipart/form-data" action="convert">
+<form method="POST" enctype="multipart/form-data" action="convert">
     <div class="form-group">
         <label for="exampleFormControlFile1">Выберите файл Книги продаж (1С Бухгалтерия)</label>
         <input type="file" class="form-control-file" id="exampleFormControlFile1" name="file">
