--- a/src/main/resources/templates/validationError.html
+++ b/src/main/resources/templates/validationError.html
@@ -20,7 +20,7 @@
         th:if="${error}" th:text="'('+${error}+')'">error ...</span>
 </p>
 <p th:text="${'Детали : ' + message}"></p>
-<form action="/" target="_blank">
+<form action="/" target="_self">
     <button type="submit" class="btn btn-primary mb-2" >Вернутся на страницу загрузки</button>
 </form>
 </div>
